syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "group.proto";

package com.demo.univer.gprc.student;

option java_package = "com.demo.univer.gprc.student";
option java_multiple_files = true;

message Student {
  int64 id = 1;
  int64 groupId = 2;
  string fio = 3;
  google.protobuf.Timestamp joinDate = 4;
}

message GetStudentsRequest {
  int64 groupId = 1;
}

message GetStudentsResponse {
  com.demo.univer.gprc.group.Group group = 1;
  repeated Student student = 2;
}

message CreateStudentRequest {
  int64 groupId = 1;
  string fio = 2;
  google.protobuf.Timestamp joinDate = 3;
}

message CreateStudentResponse {
  Student student = 1;
}

service StudentService {
  rpc getStudents(GetStudentsRequest) returns (GetStudentsResponse);
  rpc createStudent(CreateStudentRequest) returns (CreateStudentResponse);
}